jwt issue fix