@@ -6,18 +6,19 @@ import com.example.pet.parent.request.Users.UserIdRequest;
 import com.example.pet.parent.request.Users.UserLoginRequest;
 import com.example.pet.parent.service.UsersService;
 import com.example.pet.parent.util.JwtTokenProvider;
+import com.fasterxml.jackson.annotation.JsonProperty;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.Authentication;
+import org.springframework.security.core.AuthenticationException;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.web.bind.annotation.*;
 
-import java.util.List;
-import java.util.Map;
-import java.util.Optional;
+import java.util.*;
 
 @RestController
 @RequestMapping("/user")
@@ -69,25 +70,43 @@ public class UsersController {
             return ResponseEntity.badRequest().body("Email is already registered");
         user.setPassword(passwordEncoder.encode(user.getPassword()));
         Users newUser = usersService.createUser(user);
-        Authentication authentication = authenticationManager.authenticate(
-                new UsernamePasswordAuthenticationToken(user.getUsername(), user.getPassword()));
-        SecurityContextHolder.getContext().setAuthentication(authentication);
-        String token = jwtTokenProvider.generateToken(authentication);
-        return ResponseEntity.ok(Map.of("token", token, "user", newUser));
+        return ResponseEntity.ok(newUser);
+
     }
 
 
     @PostMapping("/login")
     public ResponseEntity<?> login (@RequestBody UserLoginRequest userLoginRequest) {
-        Authentication authentication = authenticationManager.authenticate(
-                new UsernamePasswordAuthenticationToken(userLoginRequest.getUsername(), userLoginRequest.getPassword()));
-        SecurityContextHolder.getContext().setAuthentication(authentication);
-        String token = jwtTokenProvider.generateToken(authentication);
-        Optional<Users> optionalUser = usersService.findByUsername(userLoginRequest.getUsername());
-        if (optionalUser.isPresent()) {
-            return ResponseEntity.ok(Map.of("token", token, "user", optionalUser.get()));
+        try {
+            byte[] passwordDecodedBytes = Base64.getDecoder().decode(userLoginRequest.getPassword());
+            String password = new String(passwordDecodedBytes);
+            Authentication authentication = authenticationManager.authenticate(
+                    new UsernamePasswordAuthenticationToken(userLoginRequest.getUsername(), userLoginRequest.getPassword()));
+            SecurityContextHolder.getContext().setAuthentication(authentication);
+            String token = jwtTokenProvider.generateToken(authentication);
+            Optional<Users> optionalUser = usersService.findByUsername(userLoginRequest.getUsername());
+            return ResponseEntity.ok(new JWTToken(token));
+        } catch (AuthenticationException exception) {
+            return new ResponseEntity<>(Collections.singletonMap("AuthenticationException", exception.getLocalizedMessage()), HttpStatus.UNAUTHORIZED);
         }
-        else
-            return ResponseEntity.status(401).body("Invalid Credentials");
     }
+
+    static class JWTToken {
+
+        private String idToken;
+
+        JWTToken(String idToken) {
+            this.idToken = idToken;
+        }
+
+        @JsonProperty("id_token")
+        String getIdToken() {
+            return idToken;
+        }
+
+        void setIdToken(String idToken) {
+            this.idToken = idToken;
+        }
+    }
+
 }
